--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="btn_back"><![CDATA[<< Back]]></string>
 
     <string name="banner_ad_unit_id">ca-app-pub-4516935382926964/7134244334</string>
+    <string name="banner_ad_unit_id1">ca-app-pub-4516935382926964/7633771930</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
