--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
     <string name="btn_back"><![CDATA[<< Back]]></string>
 
+    <string name="facebook_app_id">677246852429690</string>
+
     <string name="banner_ad_unit_id">ca-app-pub-4516935382926964/7134244334</string>
     <string name="banner_ad_unit_id1">ca-app-pub-4516935382926964/7633771930</string>
 
@@ -36,4 +38,7 @@
     <string name="title_activity_inf_home">InfHomeActivity</string>
 
     <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
